--- a/Genetic_CNN.ipynb
+++ b/Genetic_CNN.ipynb
@@ -20,10 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
@@ -39,11 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting mnist_data/train-images-idx3-ubyte.gz\n",
+      "Extracting mnist_data/train-labels-idx1-ubyte.gz\n",
+      "Extracting mnist_data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting mnist_data/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    }
+   ],
    "source": [
     "mnist = input_data.read_data_sets(\"mnist_data/\", one_hot=True)\n",
     "train_imgs   = mnist.train.images\n",
@@ -57,10 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "STAGES = np.array([\"s1\",\"s2\",\"s3\"]) # S\n",
@@ -83,9 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def weight_variable(weight_name, weight_shape):\n",
@@ -248,10 +251,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gen\tnevals\n",
+      "0  \t20    \n",
+      "1  \t8     \n",
+      "2  \t6     \n"
+     ]
+    }
+   ],
    "source": [
     "population_size = 20\n",
     "num_generations = 3\n",
@@ -276,9 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# print top-3 optimal solutions \n",
@@ -297,10 +308,11 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -313,6 +325,26 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "toc": {
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700"
+   },
+   "moveMenuLeft": true,
+   "nav_menu": {
+    "height": "78px",
+    "width": "252px"
+   },
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 4,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": true,
+   "widenNotebook": false
   }
  },
  "nbformat": 4,
